feat: add API docs for get and update profile
