# app/OpenApi/OpenApi.php
@@ -8,6 +8,15 @@ use OpenApi\Attributes as OA;
     version: '1.0.0',
     title: 'Munio'
 )]
+#[OA\SecurityScheme(
+    type: 'http',
+    description: 'Login dengan bearer token',
+    name: 'bearerToken',
+    in: 'header',
+    scheme: 'bearer',
+    bearerFormat: 'JWT',
+    securityScheme: 'bearerToken'
+)]
 class OpenApi
 {
 }
