# app/OpenApi/Responses/BaseSuccessResponse.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\OpenApi\Responses;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: 'BaseSuccessResponse'
+)]
+class BaseSuccessResponse
+{
+    #[OA\Property(example: true)]
+    public bool $success;
+
+    #[OA\Property(
+        type: 'string'
+    )]
+    public string $message;
+}
